# LookAtMe_shot_detection

./: .gitignore  README_shot_training.md  SETUP.md  create_env_final.sh  pyproject.toml  run_extraction_training_umap.sh
model_weights/: label_encoder_rf_cv.pkl  xgboost_model_cv.pkl
shot_detector/: PIPELINE.md  README.md  ball_features.py  extract_shots.py  plot_shot_metrics.py  pose_io.py  shot_mapper.py  train_model.py  train_shot_model.py  utils.py
